--- a/Test02/Views/KinhDoanh/QuanLySP.cshtml
+++ b/Test02/Views/KinhDoanh/QuanLySP.cshtml
@@ -5,91 +5,93 @@
     ViewBag.sp = "active";
     ViewBag.nd = "Danh sách sản phẩm";
 }
-<div class="row">
-    <div class="col-md-12">
-        <div class="tile">
-            <div class="row element-button">
-                <div class="col-sm-2">
-                    <a class="btn btn-delete btn-sm nhap-tu-file" href="~/KinhDoanh/ThemSP"><i class="fas fa-file-upload"></i> Thêm mới sản phẩm</a>
-                </div>
-                <div class="col-sm-2">
-                    <a class="btn btn-delete btn-sm print-file" type="button" title="In" onclick="myApp.printTable()">
-                        <i class="fas fa-print"></i> In dữ liệu
-                    </a>
-                </div>
-                <div class="col-sm-2">
-                    <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="~/KinhDoanh/QuanLySP"><i class="fas fa-copy"></i> Làm mới danh sách</a>
-                </div>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+@{
+    var checkmess = (string)TempData["messageAlert"];
+    if (checkmess == "Đã thêm mới sản phẩm")
+    {
+        <script>
+            swal({
+                title: "Thêm sản phẩm thành công",
+                text: "Mã sản phẩm @TempData["maspTT"] đã được thêm mới",
+                icon: "success",
+                button: "OK",
+            });
+        </script>
+    };
+}
 
+<div class="col-md-12">
+    <div class="tile">
+        <h3 class="tile-title">Quản lý sản phẩm</h3>
+        <div class="row element-button">
+            <div class="col-sm-2">
+                <a class="btn btn-delete btn-sm nhap-tu-file" href="~/KinhDoanh/ThemSP"><i class="fas fa-file-upload"></i> Thêm mới sản phẩm</a>
             </div>
-            <div>
-                <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
-                    <tr>
-                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="ID nhân viên: activate to sort column ascending" style="width: 80px;">
-                            Mã Sản phẩm
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.TenSP)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Gia)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.DonViTinh)
-                        </th>
-
-                        <th>
-                            @Html.DisplayNameFor(model => model.NgaySX)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.HanSD)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.TongTon)
-                        </th>
-
-                        <th></th>
-                    </tr>
-
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.MaSP)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TenSP)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Gia)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DonViTinh)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.NgaySX)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.HanSD)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.TongTon)
-                            </td>
-
-                            <td>
-                                <a href="/KinhDoanh/ChinhSuaSP/@item.MaSP" class="btn btn-primary btn-sm edit"> Chỉnh sửa</a>
-
-                                ||
-                                <a href="/KinhDoanh/XoaSP/@item.MaSP" class="btn btn-primary btn-sm deleted">
-                                    Xóa sản phẩm
-                                </a>
-                            </td>
-                        </tr>
-                    }
-
-                </table>
+            <div class="col-sm-2">
+                <a class="btn btn-delete btn-sm print-file" title="In" onclick="myApp.printTable()">
+                    <i class="fas fa-print"></i> In dữ liệu
+                </a>
             </div>
+            <div class="col-sm-2">
+                <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="~/KinhDoanh/QuanLySP"><i class="fas fa-copy"></i> Làm mới danh sách</a>
+            </div>
+
         </div>
+        <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
+               id="sampleTable">
+            <thead>
+                <tr>
+                    <th>Mã sản phẩm</th>
+                    <th>Tên sản phẩm</th>
+                    <th>Giá</th>
+                    <th>Đơn vị tính</th>
+                    <th>Ngày sản xuất</th>
+                    <th>Hạn sử dụng</th>
+                    <th>Tổng tồn</th>
+                    <th>Chức năng</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.MaSP)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TenSP)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Gia)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.DonViTinh)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.NgaySX)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.HanSD)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.TongTon)
+                        </td>
+
+                        <td>
+                            <a href="/KinhDoanh/ChinhSuaSP/@item.MaSP" class="btn btn-primary btn-sm edit"> Chỉnh sửa</a>
+
+                            ||
+                            <a href="/KinhDoanh/XoaSP/@item.MaSP" class="btn btn-primary btn-sm deleted">
+                                Xóa sản phẩm
+                            </a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+
+
+        </table>
     </div>
 </div>
 
