--- a/Test02/Views/KinhDoanh/TrangChu.cshtml
+++ b/Test02/Views/KinhDoanh/TrangChu.cshtml
@@ -70,7 +70,6 @@
         <!-- / div trống-->
     </div>
 </div>
-
 <!-- / col-12 -->
 <!-- col-12 -->
 <div class="col-md-12">
@@ -78,7 +77,7 @@
         <h3 class="tile-title">Danh sách đại lý mới</h3>
         <div>
             <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0"
-                   id="sampleTable1">
+                   id="sampleTable">
                 <thead>
                     <tr>
                         <th>Mã đại lý</th>
@@ -126,10 +125,3 @@
     </div>
 </div>
 
-<script>
-    oTable = $('#sampleTable1').dataTable();
-    $('#all').click(function (e) {
-        $('#sampleTable tbody :checkbox').prop('checked', $(this).is(':checked'));
-        e.stopImmediatePropagation();
-    });
-</script>
