--- a/Test02/Views/KeToan/ChinhsuCN.cshtml
+++ b/Test02/Views/KeToan/ChinhsuCN.cshtml
@@ -36,7 +36,7 @@
                     @Html.DisplayFor(modelItem => ThanhTien)
                 </p>
                 <div class="form-horizontal">
- 
+
                     <div class="form-group">
                         @Html.LabelFor(model => model.HanTra, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
@@ -51,12 +51,18 @@
                             <select class="form-control" id="TrangThai" name="TrangThai">
                                 <option selected="@Model.TrangThai">@Model.TrangThai</option>
                                 <option>Chưa thanh toán</option>
-                                <option>Đã Thanh toán</option>
+                                <option>Đã thanh toán</option>
                             </select>
                             @Html.ValidationMessageFor(model => model.TrangThai, "", new { @class = "text-danger" })
                         </div>
                     </div>
-
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.NgayLapCN, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.NgayLapCN, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.NgayLapCN, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
