--- a/Test02/Views/KeToan/ChinhsuaHD.cshtml
+++ b/Test02/Views/KeToan/ChinhsuaHD.cshtml
@@ -5,13 +5,15 @@
     ViewBag.Title = "ChinhsuaHD";
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    ViewBag.qlhd = "active";
+    ViewBag.nd = "Chỉnh sửa hóa đơn";
 }
 
 
 <div class="row">
     <div class="col-md-12">
         <div class="tile">
-
+            <h3 style="text-align:center">Chỉnh sửa hóa đơn @Model.MaDH</h3>
             @using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
@@ -23,10 +25,11 @@
                     @Html.HiddenFor(model => model.MaDH)
                     @Html.HiddenFor(model => model.MaDL)
                     @Html.HiddenFor(model => model.MaNVLap)
-                    @Html.HiddenFor(model => model.NgayLap)
+
                     @Html.HiddenFor(model => model.TrangThai)
                     @Html.HiddenFor(model => model.DiemGiao)
                     @Html.HiddenFor(model => model.TongTien)
+
                     <p>
                         <strong>Mã hóa đơn:</strong>@{ var mahd = db.HoaDons.Where(s => s.MaDH == Model.MaDH).FirstOrDefault();
                         }
@@ -37,7 +40,7 @@
                     <p>
                         <strong>Tên đại lý:</strong> @{ var madh = db.DaiLies.Where(s => s.MaDL == Model.MaDL).FirstOrDefault();
                         }
-                        @Html.DisplayFor(model => madh.TenDL);
+                        @Html.DisplayFor(model => madh.TenDL)
                     </p>
                     <p><strong>Địa diểm giao:</strong>@Html.DisplayFor(model => model.DiemGiao)</p>
                     <p><strong>Trạng thái đơn hàng:</strong>@Html.DisplayFor(model => model.TrangThai)</p>
@@ -46,23 +49,39 @@
                         <strong>Tổng đơn hàng:</strong> @{ var ThanhTien = string.Format("{0:0,0 vnđ}", Model.TongTien);}
                         @Html.DisplayFor(modelItem => ThanhTien)
                     </p>
+                    <p>
+                        <strong>Tình trạng thanh toán:</strong>
+                        <div class="form-group">
+                            <div class="col-md-3">
+                                <select class="form-control" id="TinhTrangThanhToan" name="TinhTrangThanhToan">
+                                    <option selected="@Model.TinhTrangThanhToan">@Model.TinhTrangThanhToan</option>
+                                    <option>Chưa thanh toán</option>
+                                    <option>Đã thanh toán</option>
+                                    <option>Đang nợ</option>
+                                </select>
+                            </div>
+                            @Html.ValidationMessageFor(model => model.TinhTrangThanhToan, "", new { @class = "text-danger" })
 
+                        </div>
+                    </p>
                     <div class="form-group">
-                        @Html.LabelFor(model => model.TinhTrangThanhToan, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <select class="form-control" id="TinhTrangThanhToan" name="TinhTrangThanhToan">
-                            <option selected="@Model.TinhTrangThanhToan">@Model.TinhTrangThanhToan</option>
-                            <option>Chưa thanh toán</option>
-                            <option>Đã thanh toán</option>
-                        </select>
-                        @*@Html.EditorFor(model => model.TinhTrangThanhToan, new { htmlAttributes = new { @class = "form-control" } })*@
-                        @Html.ValidationMessageFor(model => model.TinhTrangThanhToan, "", new { @class = "text-danger" })
-
+                        @Html.LabelFor(model => model.NgayLap, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.NgayLap, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.NgayLap, "", new { @class = "text-danger" })
+                        </div>
                     </div>
+
+                    @*<div class="form-group col-md-3">
+                        @Html.LabelFor(model => model.NgayLap, htmlAttributes: new { @class = "control-label " })
+                        <input class="form-control text-box single-line" data-val="true" data-val-date="The field HanSH must be a date." id="NgayLap" name="NgayLap" type="datetime-local" value="">
+                        @Html.ValidationMessageFor(model => model.NgayLap, "", new { @class = "text-danger" })
+                    </div>*@
 
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Thêm" class="btn btn-default" />
+                            <input type="submit" value="Chỉnh sửa" class="btn btn-info" />
                         </div>
                     </div>
                 </div>
@@ -70,7 +89,7 @@
                     }
 
                     <div>
-                        @Html.ActionLink("Back to List", "Index")
+                        @Html.ActionLink("Quay lại danh sách hóa đơn", "QLHoaDon")
                     </div>
                 </div>
             </div>
