--- a/Test02/Views/KeToan/QLCongno.cshtml
+++ b/Test02/Views/KeToan/QLCongno.cshtml
@@ -28,14 +28,7 @@
                     </div>
 
                 </div>
-                <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
-
-                    <div class="col-md-1">
-                        <div id="sampleTable_filter" class="dataTables_filter">
-                            <label>Tìm kiếm:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="sampleTable"></label>
-                        </div>
-                    </div>
-                </div>
+                
                 <div class="row">
                     <div class="col-sm-12">
                         <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
@@ -44,57 +37,65 @@
                                 <tr role="row">
                                     <th width="300" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã công nợ: activate to sort column ascending" style="width: 90px;">Mã Công nợ</th>
                                     <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tên đại lý: activate to sort column ascending" style="width: 160px;">Tên đại lý</th>
+                                    <th width="300" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã công nợ: activate to sort column ascending" style="width: 90px;">Mã Đại lý</th>
                                     <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Loại: activate to sort column ascending" style="width: 100px;">Loại đại lý</th>
                                     <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tổng nợ: activate to sort column ascending" style="width: 124px;">Tổng nợ</th>
+                                    <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Hạn trả: activate to sort column ascending" style="width: 124px;">Ngày tạo phiếu:</th>
                                     <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Hạn trả: activate to sort column ascending" style="width: 124px;">Hạn trả</th>
                                     <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tình trạng: activate to sort column ascending" style="width: 124px;">Tình trạng</th>
-                                    <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tính năng: activate to sort column ascending" style="width: 160px;">Chức năng</th>
+                                    <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tính năng: activate to sort column ascending" style="width: 180px;">Chức năng</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                            </tbody>
+                           
                             <tbody>
                                 @foreach (var item in Model)
                                 {
-                                    <tr>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.MaCongNo)
-                                        </td>
-                                        <td>
-                                            @{var tendl = db.DaiLies.Find(item.MaDL);
-                                            }
-                                            @Html.DisplayFor(modelItem => tendl.TenDL)
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.MaCongNo)
+                                    </td>
+                                    <td>
+                                        @{var tendl = db.DaiLies.Find(item.MaDL);
+                                        }
+                                        @Html.DisplayFor(modelItem => tendl.TenDL)
 
-                                        </td>
-                                        <td>
-                                            @{var loaidly = db.DaiLies.Find(item.MaDL);
-                                            }
-                                            @Html.DisplayFor(modelItem => loaidly.MaLoaiDL)
-                                        </td>
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.MaDL)
+                                    </td>
+                                    <td>
+                                        @{var loaidly = db.DaiLies.Find(item.MaDL);
+                                        }
+                                        @Html.DisplayFor(modelItem => loaidly.MaLoaiDL)
+                                    </td>
 
-                                        <td>
-                                            @{ var Tienno = string.Format("{0:0,0 vnđ}", item.TienNo);}
-                                            @Html.DisplayFor(modelItem => Tienno)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.HanTra)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.TrangThai)
-                                        </td>
-                                        <td>
-                                            <a href="/KeToan/ChinhsuCN/@item.MaCongNo" class="btn btn-primary btn-sm edit">
-                                                <i class="fa fa-edit"></i>
-                                            </a>
-                                            <a href="/KeToan/XoaCN/@item.MaCongNo" class="btn btn-primary btn-sm trash">
-                                                <i class="fas fa-trash-alt"></i>
-                                            </a>
-                                            <a href="/KeToan/XuatCN/@item.MaCongNo" class="btn btn-primary btn-sm edit">
-                                                <i class="fas fa-train"></i>
-                                            </a>
+                                    <td>
+                                        @{ var Tienno = string.Format("{0:0,0 vnđ}", item.TienNo);}
+                                        @Html.DisplayFor(modelItem => Tienno)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.NgayLapCN)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.HanTra)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.TrangThai)
+                                    </td>
+                                    <td>
+                                        <a href="/KeToan/ChinhsuCN/@item.MaCongNo" class="btn btn-primary btn-sm edit">
+                                            <i class="fa fa-edit"></i>
+                                        </a>
+                                        <a href="/KeToan/XoaCN/@item.MaCongNo" class="btn btn-primary btn-sm trash">
+                                            <i class="fas fa-trash-alt"></i>
+                                        </a>
+                                        
+                                        <a href="/KeToan/ChitietCN/@item.MaCongNo" class="btn btn-primary btn-sm add ">
+                                            <i class="fas fa-train"></i>
+                                        </a>
 
-                                        </td>
-                                    </tr>
+                                    </td>
+                                </tr>
                                 }
                             </tbody>
                         </table>
@@ -103,7 +104,7 @@
             </div>
         </div>
     </div>
-</div>
-</div>
+
+
 
 
