--- a/Test02/Views/KeToan/QLHoaDon.cshtml
+++ b/Test02/Views/KeToan/QLHoaDon.cshtml
@@ -14,15 +14,19 @@
         <div class="tile">
             <div class="tile-body">
 
-                <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
-                    <div class="row">
-
-                        <div class="col-md-1">
-                            <div id="sampleTable_filter" class="dataTables_filter">
-                                <label>Tìm kiếm:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="sampleTable"></label>
-                            </div>
-                        </div>
+                <div class="row element-button">
+                    <div class="col-sm-2">
+                        <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Làm mới" href="~/KeToan/QLHoaDon"><i class="fas fa-copy"></i> Làm mới danh sách</a>
                     </div>
+                    <div class="col-sm-2">
+                        <a class="btn btn-delete btn-sm print-file" type="button" title="In" onclick="myApp.printTable()">
+                            <i class="fas fa-print"></i> In dữ liệu
+                        </a>
+                    </div>
+                </div>
+
+                <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
+
                     <div class="row">
                         <div class="col-sm-12">
                             <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
@@ -30,65 +34,73 @@
                                 <thead>
                                     <tr role="row">
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã hóa đơn: activate to sort column ascending" style="width: 60px;">Mã hóa đơn</th>
-                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã đại lý: activate to sort column ascending" style="width: 60px;">Mã đại lý</th>
+                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã đơn hàng: activate to sort column ascending" style="width: 60px;">Mã đơn hàng</th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tên đại lý: activate to sort column ascending" style="width: 140px;">Tên đại lý</th>
+                                                                                <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã đại lý: activate to sort column ascending" style="width: 60px;">Mã đại lý</th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tổng tiền: activate to sort column ascending" style="width: 100px;">Tổng hóa đơn</th>
-                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã đơn hàng: activate to sort column ascending" style="width: 100px;">Mã nhân viên</th>
+                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Mã đơn hàng: activate to sort column ascending" style="width: 60px;">Mã nhân viên</th>
                                         <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Trạng thái: activate to sort column ascending" style="width: 150px;">Trạng thái</th>
                                         <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Ngày lập: activate to sort column ascending" style="width: 90px;">Ngày lập</th>
-                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Chức vụ: activate to sort column ascending" style="width: 160px;">Chức năng</th>
+                                        <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Chức vụ: activate to sort column ascending" style="width: 180px;">Chức năng</th>
 
                                     </tr>
                                 </thead>
                                 <tbody>
+                                    @{ 
+                                      
+                                    }
                                     @foreach (var item in Model)
                                     {
-                                        <tr>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.MaHD)
-                                            </td>
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.MaHD)
+                                        </td>
 
-                                            <td>
-                                                @{var madl = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();
+                                        <td>
+                                            
+                                            @Html.DisplayFor(modelItem => item.MaDH)
+                                        </td>
+                                        <td>
+                                            @{var madh = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();
+                                                var tendl = db.DaiLies.Where(s => s.MaDL == madh.MaDL).FirstOrDefault();
+                                            }
+                                            @Html.DisplayFor(modelItem => tendl.TenDL)
+                                        </td>
+                                        <td>
+                                            @{var madl = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();
 
-                                                }
-                                                @Html.DisplayFor(modelItem => madl.MaDL)
-                                            </td>
-                                            <td>
-                                                @{var madh = db.DonHangs.Where(s => s.MaDH == item.MaDH).FirstOrDefault();
-                                                    var tendl = db.DaiLies.Where(s => s.MaDL == madh.MaDL).FirstOrDefault();
-                                                }
-                                                @Html.DisplayFor(modelItem => tendl.TenDL)
-                                            </td>
+                                            }
+                                            @Html.DisplayFor(modelItem => madl.MaDL)
+                                        </td>
+                                        <td>
+                                            @{ var ThanhTien = string.Format("{0:0,0 vnđ}", item.TongTien);}
+                                            @Html.DisplayFor(modelItem => ThanhTien)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.TenDVTiepNhan)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => madh.TinhTrangThanhToan)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => madh.NgayLap)
+                                        </td>
 
-                                            <td>
-                                                @{ var ThanhTien = string.Format("{0:0,0 vnđ}", item.TongTien);}
-                                                @Html.DisplayFor(modelItem => ThanhTien)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.TenDVTiepNhan)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => madh.TinhTrangThanhToan)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.NgayLap)
-                                            </td>
 
-                                            <td>
-                                                
-                                                <a href="/KeToan/ChinhsuaHD/@item.MaDH" class="btn btn-primary btn-sm edit">
-                                                    <i class="fa fa-edit"></i>
-                                                </a>
-                                                <a href="/KeToan/XoaHD/@item.MaHD" class="btn btn-primary btn-sm trash">
-                                                    <i class="fas fa-trash-alt"></i>
-                                                </a>
-                                                <a href="/KeToan/XuatHDBH/@item.MaDH" class="btn btn-primary btn-sm edit">
-                                                    <i class="fas fa-train"></i>
-                                                </a>
-                                            </td>
+                                        <td>
 
-                                        </tr>
+                                            <a href="/KeToan/ChinhsuaHD/@item.MaDH" class="btn btn-primary btn-sm edit">
+                                                <i class="fa fa-edit"></i>
+                                            </a>
+                                            <a href="/KeToan/XoaHD/@item.MaHD" class="btn btn-primary btn-sm trash">
+                                                <i class="fas fa-trash-alt"></i>
+                                            </a>
+                                            <a href="/KeToan/XuatHDBH/@item.MaDH" class="btn btn-primary btn-sm edit">
+                                                <i class="fas fa-train"></i>
+                                            </a>
+                                        </td>
+
+                                    </tr>
                                     }
                                 </tbody>
                             </table>
@@ -101,32 +113,21 @@
 </div>
 
 
-
-    @*<script src="~/Scripts/jquery-3.4.1.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
-    
-    <script type="text/javascript">
-       $(document).ready(function () {
-           $("#btnalermessage").click(function () {
-                swal("a");
-            });
-        });*@
-        @*function openSuccess(strmess) {
-            var myDiv = document.getElementById("mymodalsuccessAlerbody");
-            myDiv.innerHTML = strmess;
-            $('MyModalSuccess').modal('show');
+<script>
+    //In dữ liệu
+    var myApp = new function () {
+        this.printTable = function () {
+            var tab = document.getElementById('sampleTable');
+            var win = window.open('', '', 'height=800px,width=1200px');
+            win.document.write(tab.outerHTML);
+            win.document.close();
+            win.print();
         }
+    }
 
-        $(document).ready(function () {
-            var msg = "@TempData["successmassage"]";
-            if (msg)
-                openSuccess(msg);
-
-        }
-        );*@
-
-
-
-    @*</script>*@
-
-
+    oTable = $('#sampleTable').dataTable();
+    $('#all').click(function (e) {
+        $('#sampleTable tbody :checkbox').prop('checked', $(this).is(':checked'));
+        e.stopImmediatePropagation();
+    });
+</script>
