--- a/Test02/Views/KeToan/QLyDonHangKeToan.cshtml
+++ b/Test02/Views/KeToan/QLyDonHangKeToan.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "QLyDonHangKeToan";
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
     ViewBag.qldonhangkt = "active";
-    ViewBag.nd = "Danh sách đơn hàng";
+    ViewBag.nd = "Danh sách đơn hàng đã được xét duyệt";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
     var hd = db.HoaDons.ToList();
 }
@@ -14,14 +14,18 @@
         <div class="tile">
             <div class="tile-body">
 
-                <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
-                    <div class="row">
-                        <div class="col-md-1">
-                            <div id="sampleTable_filter" class="dataTables_filter">
-                                <label>Tìm kiếm:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="sampleTable"></label>
-                            </div>
-                        </div>
+                <div class="row element-button">
+                    <div class="col-sm-2">
+                        <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Làm mới" href="~/KeToan/QLyDonHangKeToan"><i class="fas fa-copy"></i> Làm mới danh sách</a>
                     </div>
+                    <div class="col-sm-2">
+                        <a class="btn btn-delete btn-sm print-file" type="button" title="In" onclick="myApp.printTable()">
+                            <i class="fas fa-print"></i> In dữ liệu
+                        </a>
+                    </div>
+                </div>
+
+                <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
                     <div class="row">
                         <div class="col-sm-12">
                             <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
@@ -33,9 +37,7 @@
                                         <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Địa chỉ: activate to sort column ascending" style="width: 140px;">Tên đại lý</th>
                                         <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Địa chỉ: activate to sort column ascending" style="width: 90px;">Mã đại lý</th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Chức vụ: activate to sort column ascending" style="width: 100px;">Ngày lập</th>
-                                        <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tính năng: activate to sort column ascending" style="width: 120px;">Trạng thái đơn hàng</th>
                                         <th class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Chức vụ: activate to sort column ascending" style="width: 100px;">Địa điểm giao hàng</th>
-
                                         <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tính năng: activate to sort column ascending" style="width: 120px;">Tổng tiền</th>
                                         <th width="100" class="sorting" tabindex="0" aria-controls="sampleTable" rowspan="1" colspan="1" aria-label="Tính năng: activate to sort column ascending" style="width: 110px;">Tình trạng thanh toán</th>
 
@@ -45,8 +47,8 @@
                                 <tbody>
                                     @foreach (var item in Model)
                                     {
-                                       
-                                        if (item.TrangThai == "Đã xét duyệt" )
+
+                                        if (item.TrangThai == "Đã xét duyệt")
                                         {
                                     <tr>
 
@@ -63,13 +65,10 @@
                                             @Html.DisplayFor(modelItem => item.MaDL)
                                         </td>
 
-                                       
+
 
                                         <td>
                                             @Html.DisplayFor(modelItem => item.NgayLap)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.TrangThai)
                                         </td>
                                         <td>
                                             @Html.DisplayFor(modelItem => item.DiemGiao)
@@ -87,7 +86,8 @@
                                             </a>
 
                                         </td>
-                                    </tr>}
+                                    </tr>
+                                        }
 
                                     }
                                 </tbody>
@@ -100,6 +100,23 @@
     </div>
 </div>
 
+<script>
+        //In dữ liệu
+        var myApp = new function () {
+            this.printTable = function () {
+                var tab = document.getElementById('sampleTable');
+                var win = window.open('', '', 'height=800px,width=1200px');
+                win.document.write(tab.outerHTML);
+                win.document.close();
+                win.print();
+            }
+    }
 
+    oTable = $('#sampleTable').dataTable();
+    $('#all').click(function (e) {
+        $('#sampleTable tbody :checkbox').prop('checked', $(this).is(':checked'));
+        e.stopImmediatePropagation();
+    });
+</script>
 
 
