--- a/Test02/Views/KeToan/TrangChuKeToan.cshtml
+++ b/Test02/Views/KeToan/TrangChuKeToan.cshtml
@@ -15,7 +15,7 @@
         <h3 class="tile-title">Tổng quan hóa đơn</h3>
         <div class="row">
             <div class="col-sm-12">
-                <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
+                <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0"  role="grid" aria-describedby="sampleTable_info">
                     @*//Phần render từng dòng trong C#*@
                     <thead>
                         <tr role="row">
