--- a/Test02/Views/KeToan/XoaHD.cshtml
+++ b/Test02/Views/KeToan/XoaHD.cshtml
@@ -35,7 +35,7 @@
                     @Html.AntiForgeryToken()
 
                     <div class="form-actions no-color">
-                        <input type="submit" value="Xóa" class="btn btn-default" /> |
+                        <input type="submit" value="Xóa" class="btn btn-danger" /> 
                         @Html.ActionLink("Quay lại danh sách hóa đơn", "QLHoaDon")
                     </div>
                 }
