--- a/Test02/Views/PhongKho/DeleteBBKK.cshtml
+++ b/Test02/Views/PhongKho/DeleteBBKK.cshtml
@@ -55,8 +55,8 @@
     @Html.AntiForgeryToken()
 
     <div class="form-actions no-color">
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        @Html.ActionLink("Back to List", "BaoCao")
+        <input type="submit" value="Xóa" class="btn btn-danger" /> |
+        @Html.ActionLink("Quay lại", "BaoCao")
     </div>
 }
 </div>
