--- a/Test02/Views/PhongKho/CreateBBKK.cshtml
+++ b/Test02/Views/PhongKho/CreateBBKK.cshtml
@@ -35,13 +35,13 @@
         </div>
     </div>
 
-    <div class="form-group">
+    @*<div class="form-group">
         @Html.LabelFor(model => model.TenNV, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.TenNV, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.TenNV, "", new { @class = "text-danger" })
         </div>
-    </div>
+    </div>*@
 
     <div class="form-group">
         @Html.LabelFor(model => model.TenBienBang, htmlAttributes: new { @class = "control-label col-md-2" })
