--- a/Test02/Views/PhongKho/CreateCTBBKK.cshtml
+++ b/Test02/Views/PhongKho/CreateCTBBKK.cshtml
@@ -13,7 +13,6 @@
     @Html.AntiForgeryToken()
 
 <div class="form-horizontal">
-    <h4>ChiTietBienBang</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.MaCTBB)
@@ -36,6 +35,7 @@
 
     <div class="form-group">
         @Html.LabelFor(model => model.SLTonKho, htmlAttributes: new { @class = "control-label col-md-2" })
+        <span> Số lượng tồn kho đã kiểm tra!</span>
         <div class="col-md-10">
             @Html.EditorFor(model => model.SLTonKho, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.SLTonKho, "", new { @class = "text-danger" })
@@ -44,6 +44,7 @@
 
     <div class="form-group">
         @Html.LabelFor(model => model.SLThucTe, htmlAttributes: new { @class = "control-label col-md-2" })
+        <span>Số lượng thực tế còn lại trong kho!</span>
         <div class="col-md-10">
             @Html.EditorFor(model => model.SLThucTe, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.SLThucTe, "", new { @class = "text-danger" })
